--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
 fastapi==0.109.2
-uvicorn==0.27.1
+uvicorn[standard]==0.27.1
 python-multipart==0.0.9
 wikipedia==1.4.0
 python-dotenv==1.0.1
@@ -9,4 +9,5 @@ python-jose==3.3.0
 passlib==1.7.4
 bcrypt==4.1.2
 python-socketio==5.11.1
-websockets==12.0 
+websockets==12.0
+gunicorn==21.2.0 
