--- a/env.example
+++ b/env.example
@@ -2,5 +2,6 @@
 VITE_API_URL=https://eli5-backend.onrender.com
 
 # Backend Environment Variables
-TOGETHER_API_KEY=your_together_api_key_here
+GROQ_API_KEY=your_groq_api_key_here
+GROQ_MODEL=llama-3.3-70b-versatile
 FRONTEND_URL=https://eli5-frontend.onrender.com 
