--- a/env.example
+++ b/env.example
@@ -1,7 +1,34 @@
-# Frontend Environment Variables
-VITE_API_URL=https://eli5-backend.onrender.com
+# ============================================
+# ELI5 Universe Builder — Environment Variables
+# ============================================
+# Copy this file and fill in values:
+#   cp env.example backend/.env
+# ============================================
 
-# Backend Environment Variables
+# ============================================
+# Backend (backend/.env)
+# ============================================
+
+# Required: Get a free key at https://console.groq.com
 GROQ_API_KEY=your_groq_api_key_here
+
+# Optional: Change the Groq model (default: llama-3.3-70b-versatile)
 GROQ_MODEL=llama-3.3-70b-versatile
-FRONTEND_URL=https://eli5-frontend.onrender.com 
+
+# Optional: Number of Gunicorn workers (default: 2, recommended: 2 * CPU_cores + 1)
+GUNICORN_WORKERS=2
+
+# Optional: Additional CORS origins (comma-separated, only needed if NOT using Nginx reverse proxy)
+# CORS_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
+
+# Optional: Frontend URL for CORS (only needed if NOT using Nginx reverse proxy)
+# FRONTEND_URL=https://yourdomain.com
+
+# ============================================
+# Frontend (build-time args in docker-compose.yml)
+# ============================================
+
+# VITE_API_URL — API base URL baked into the frontend at build time
+# With Docker (Nginx reverse proxy): leave empty (default) — uses relative /api/* paths
+# Without Docker (separate hosting): set to your backend URL
+# VITE_API_URL=https://your-backend-url.com
